# flexdis86

./: .gitignore  .gitmodules  .travis.yml  IDEAS.md  README.md  cabal.project.dist  cabal.project.ghc-8.10.4.freeze  cabal.project.ghc-8.10.7.freeze  cabal.project.ghc-9.0.2.freeze  cabal.project.ghc-9.10.1.freeze  cabal.project.ghc-9.12.2.freeze  cabal.project.ghc-9.2.2.freeze  cabal.project.ghc-9.2.8.freeze  cabal.project.ghc-9.4.5.freeze  cabal.project.ghc-9.4.8.freeze  cabal.project.ghc-9.6.2.freeze  cabal.project.ghc-9.6.4.freeze  cabal.project.ghc-9.8.1.freeze  cabal.project.werror  flexdis86.cabal  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack.yaml
.github/workflows/: ci.yaml
binary-symbols/: LICENSE  binary-symbols.cabal
binary-symbols/src/Data/: BinarySymbols.hs
data/: .optable.xml.swp  optable.xml
scripts/: compare.py  update-deps.sh
src/: Flexdis86.hs
src/Flexdis86/: Assembler.hs  ByteReader.hs  DefaultParser.hs  Disassembler.hs  InstructionSet.hs  OpTable.hs  OpcodeList.hs  Operand.hs  PrefixAccum.hs  PrefixSet.hs  Prefixes.hs  Register.hs  Relocation.hs  Segment.hs  Sizes.hs  Trie.hs
src/Flexdis86/DefaultParser/: TH.hs
src/Flexdis86/OpTable/: Parse.hs
src/Flexdis86/Prefixes/: Allowed.hs  Bytes.hs  Code.hs  REX.hs  Required.hs  Seen.hs  VEX.hs
src/Flexdis86/VEX/: Allowed.hs  Seen.hs
tests/: Assemble.hs  Binaries.hs  Main.hs  Roundtrip.hs  Util.hs
tests/roundtrip-tests/: Assemble.hs  Main.hs  Roundtrip.hs  Util.hs
utils/: DumpInstr.hs  README.md  dump.sh  dump_bytes.sh  dump_instr.sh  get_deps.sh
