Name:          flexdis86
Version:       0.1.1
Author:        Galois Inc.
Maintainer:    jhendrix@galois.com
Build-type:    Simple
Cabal-version: >= 1.10
Synopsis: A flexible disassembler or x86

library
  default-language: Haskell2010
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring >= 0.10 && < 0.11,
    containers,
    lens,
    mtl,
    template-haskell,
    vector,
    xml

  hs-source-dirs: src

  exposed-modules:
    Flexdis86
    Flexdis86.Assembler
    Flexdis86.ByteReader
    Flexdis86.DefaultParser
    Flexdis86.Disassembler
    Flexdis86.InstructionSet
    Flexdis86.Operand
    Flexdis86.OpTable
    Flexdis86.Prefixes
    Flexdis86.Register
    Flexdis86.Segment
    Flexdis86.Sizes

  GHC-options: -Wall -fno-ignore-asserts -O2

executable DumpInstr
  default-language: Haskell2010
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers,
    flexdis86,
    lens,
    mtl,
    template-haskell,
    vector,
    xml

  hs-source-dirs: utils
  main-is: DumpInstr.hs

test-suite roundtrip-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: tests/roundtrip-tests
  other-modules: Assemble
                 Roundtrip
                 Util
  ghc-options: -Wall
  build-depends: flexdis86,
                 base,
                 bytestring,
                 tasty >= 0.10 && < 0.12,
                 tasty-hunit,
                 process >= 1.2 && < 1.5,
                 temporary >= 1 && < 2,
                 pretty-hex,
                 elf >= 0.28
