Name:          flexdis86
Version:       0.1.2
Author:        Galois Inc.
Maintainer:    jhendrix@galois.com, tristan@galois.com
Build-type:    Simple
Cabal-version: >= 1.10
Synopsis: A disassembler and assembler for x86

library
  default-language: Haskell2010
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    binary-symbols,
    bytestring,
    containers,
    directory,
    filepath,
    lens,
    mtl,
    template-haskell,
    vector,
    xml

  hs-source-dirs: src
  exposed-modules:
    Flexdis86
    Flexdis86.ByteReader
    Flexdis86.InstructionSet
    Flexdis86.Operand
    Flexdis86.Prefixes
    Flexdis86.Register
    Flexdis86.Relocation
    Flexdis86.Segment
    Flexdis86.Sizes

  other-modules:
    Flexdis86.Assembler
    Flexdis86.DefaultParser
    Flexdis86.Disassembler
    Flexdis86.OpTable
  GHC-options: -Wall -fno-ignore-asserts -O2

executable DumpInstr
  default-language: Haskell2010
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers,
    flexdis86,
    lens,
    mtl,
    template-haskell,
    vector,
    xml

  hs-source-dirs: utils
  main-is: DumpInstr.hs

test-suite roundtrip-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    tests/roundtrip-tests

  ghc-options: -Wall

  build-depends: flexdis86,
                 base,
                 bytestring,
                 tasty >= 0.10,
                 tasty-hunit,
                 process >= 1.2 && < 1.7,
                 lens,
                 temporary >= 1 && < 2,
                 elf-edit,
                 pretty-hex
  other-modules:
    Assemble
    Roundtrip
    Util

  if !os(darwin) && !os(windows)
     cpp-options: -DARCH_ELF
